# smart-disk-cleaner

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: config.yml  new-scenario.md  path-blocking.md  rollback-failure.md  scenario-misclassification.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: ai_advisor.rs  analyzer.rs  config.rs  dedup.rs  diagnostics.rs  executor.rs  lib.rs  migration_advisor.rs  migration_planner.rs  models.rs  platform.rs  process_advisor.rs  reporter.rs  scanner.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  cleanup.rs  config.rs  migration.rs  mod.rs  process.rs  registry.rs  scan.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue
ui/src/components/: AppOverviewSection.vue
ui/src/composables/: useAiCleanup.ts  useAiFile.ts  useCleanup.ts  useConfig.ts  useMigration.ts  useProcesses.ts  useRegistry.ts  useScan.ts
ui/src/router/: index.ts
ui/src/stores/: app.ts
ui/src/types/: index.ts
ui/src/views/: AiCleanupView.vue  CleanupView.vue  HistoryView.vue  MigrationView.vue  ProcessesMonitorChartsView.vue  ProcessesMonitorView.vue  ProcessesSortedView.vue  ProcessesView.vue  RegistryView.vue  ResultsView.vue  ResultsWorkbenchView.vue  ScanView.vue  SettingsView.vue
