[package]
name = "smart-disk-cleaner-gui"
version = "0.1.0"
edition = "2021"
description = "Tauri GUI for smart-disk-cleaner"

[lib]
name = "smart_disk_cleaner_gui_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
smart-disk-cleaner-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
tracing = "0.1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_RestartManager", "Win32_Storage_FileSystem"] }
